debug PropertyVoMapper.listByNumOfAvailableDaysTest